[package]
name = "camascii"
version = "0.1.0"
edition = "2024"
description = "Webcam live stream rendered as colored ASCII art in the terminal"
license = "MIT"
repository = "https://github.com/jwoirhaye/camascii"
keywords = ["webcam", "ascii", "terminal", "tui", "v4l2"]

[dependencies]
rscam = "0.5"
crossterm = "0.27"
ratatui = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
